--- a/PingPongAbgabe/src/view/pingpong.fxml
+++ b/PingPongAbgabe/src/view/pingpong.fxml
@@ -14,8 +14,8 @@
          <children>
             <ListView fx:id="list1" layoutX="18.0" layoutY="12.0" prefHeight="675.0" prefWidth="265.0" />
             <ListView fx:id="list2" layoutX="616.0" layoutY="12.0" prefHeight="675.0" prefWidth="267.0" />
-            <Button layoutX="316.0" layoutY="652.0" mnemonicParsing="false" onAction="#einServer" text="1 Server" />
-            <Button layoutX="524.0" layoutY="651.0" mnemonicParsing="false" onAction="#zweiServer" text="2 Server" />
+            <Button fx:id="button1" layoutX="316.0" layoutY="652.0" mnemonicParsing="false" onAction="#einServer" text="1 Server" />
+            <Button fx:id="button2" layoutX="524.0" layoutY="651.0" mnemonicParsing="false" onAction="#zweiServer" text="2 Server" />
             <Label layoutX="366.0" layoutY="26.0" prefHeight="54.0" prefWidth="180.0" text="PING PONG">
                <font>
                   <Font size="33.0" />
